2009-06-05	Santosh G Vattam <vattam.santosh@gmail.com>

	* heapwalk/heapwalk.scn, heapwalk/init.c: Add a test case.

2009-05-19	Chris Johns <chrisj@rtems.org>

	* cpuuse/tswitch.c: Lower sample count for small memory targets.
	* cpuuse/system.h: Smaller stack size for small memory targets.
	* monitor02/init.c: Cannot run on small memory targets.

2009-05-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtmonuse/init.c: Do not use Task_name array before initialized.

2009-05-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloctest/init.c: Fix warning.

2009-05-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloctest/init.c: Fix typo.

2009-05-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add shell of heap walk test for Santosh.
	* heapwalk/.cvsignore, heapwalk/Makefile.am, heapwalk/heapwalk.scn,
	heapwalk/init.c, heapwalk/system.h: New files.

2009-05-07	Santosh G Vattam <vattam.santosh@gmail.com>

	* malloctest/init.c: Add test case for heap resize block when the
	resize creates a free block large enough to free.

2009-04-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* cpuuse/Makefile.am, malloctest/Makefile.am,
	monitor/Makefile.am, monitor02/Makefile.am,
	putenvtest/Makefile.am, rtems++/Makefile.am,
	rtmonuse/Makefile.am, stackchk/Makefile.am,
	termios/Makefile.am, tztest/Makefile.am:
	Eliminate _exe_/.exe.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* stackchk/stackchk.scn: Correct screen to match output.

2008-12-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloctest/init.c: Change sizes of heap/region and allocated objects
	in heap to intptr_t so they can be larger than a single allocatable
	object (e.g. size_t).

2008-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* malloctest/init.c: Do not generate alignment factors larger that will
	not fit in a native integer.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* stackchk/system.h: Rename STACK_CHECKER_ON to more appropriate